--- a/Square/SquareGame.vm
+++ b/Square/SquareGame.vm
@@ -2,3 +2,71 @@ function SquareGame.new 0
 push constant 0
 call Memory.alloc 1
 pop pointer 0
+push constant 0
+push constant 0
+push constant 30
+call Square.new 3
+pop this 0
+push constant 0
+pop this 1
+push pointer 0
+return
+function SquareGame.dispose 0
+push argument 0
+pop pointer 0
+call square.dispose 0
+pop temp 0
+push pointer 0
+call Memory.deAlloc 1
+pop temp 0
+push constant 0
+return
+function SquareGame.moveSquare 0
+push argument 0
+pop pointer 0
+push this 1
+push constant 1
+eq
+if-goto L0
+goto L1
+label L0
+call square.moveUp 0
+pop temp 0
+label L1
+push this 1
+push constant 2
+eq
+if-goto L2
+goto L3
+label L2
+call square.moveDown 0
+pop temp 0
+label L3
+push this 1
+push constant 3
+eq
+if-goto L4
+goto L5
+label L4
+call square.moveLeft 0
+pop temp 0
+label L5
+push this 1
+push constant 4
+eq
+if-goto L6
+goto L7
+label L6
+call square.moveRight 0
+pop temp 0
+label L7
+push constant 5
+call Sys.wait 1
+pop temp 0
+push constant 0
+return
+function SquareGame.run 2
+push argument 0
+pop pointer 0
+push constant 0
+pop local 1
