--- a/Square/SquareGame.vm
+++ b/Square/SquareGame.vm
@@ -1,5 +1,5 @@
 function SquareGame.new 0
-push constant 0
+push constant 2
 call Memory.alloc 1
 pop pointer 0
 push constant 0
@@ -14,7 +14,8 @@ return
 function SquareGame.dispose 0
 push argument 0
 pop pointer 0
-call square.dispose 0
+push this 0
+call Square.dispose 1
 pop temp 0
 push pointer 0
 call Memory.deAlloc 1
@@ -30,7 +31,8 @@ eq
 if-goto L0
 goto L1
 label L0
-call square.moveUp 0
+push this 0
+call Square.moveUp 1
 pop temp 0
 label L1
 push this 1
@@ -39,7 +41,8 @@ eq
 if-goto L2
 goto L3
 label L2
-call square.moveDown 0
+push this 0
+call Square.moveDown 1
 pop temp 0
 label L3
 push this 1
@@ -48,7 +51,8 @@ eq
 if-goto L4
 goto L5
 label L4
-call square.moveLeft 0
+push this 0
+call Square.moveLeft 1
 pop temp 0
 label L5
 push this 1
@@ -57,7 +61,8 @@ eq
 if-goto L6
 goto L7
 label L6
-call square.moveRight 0
+push this 0
+call Square.moveRight 1
 pop temp 0
 label L7
 push constant 5
@@ -70,3 +75,105 @@ push argument 0
 pop pointer 0
 push constant 0
 pop local 1
+label L8
+push local 1
+not
+not
+if-goto L9
+label L10
+push local 0
+push constant 0
+eq
+not
+if-goto L11
+call Keyboard.keyPressed 0
+pop local 0
+push pointer 0
+call SquareGame.moveSquare 1
+pop temp 0
+goto L10
+label L11
+push local 0
+push constant 81
+eq
+if-goto L12
+goto L13
+label L12
+push constant 0
+not
+pop local 1
+label L13
+push local 0
+push constant 90
+eq
+if-goto L14
+goto L15
+label L14
+push this 0
+call Square.decSize 1
+pop temp 0
+label L15
+push local 0
+push constant 88
+eq
+if-goto L16
+goto L17
+label L16
+push this 0
+call Square.incSize 1
+pop temp 0
+label L17
+push local 0
+push constant 131
+eq
+if-goto L18
+goto L19
+label L18
+push constant 1
+pop this 1
+label L19
+push local 0
+push constant 133
+eq
+if-goto L20
+goto L21
+label L20
+push constant 2
+pop this 1
+label L21
+push local 0
+push constant 130
+eq
+if-goto L22
+goto L23
+label L22
+push constant 3
+pop this 1
+label L23
+push local 0
+push constant 132
+eq
+if-goto L24
+goto L25
+label L24
+push constant 4
+pop this 1
+label L25
+label L26
+push local 0
+push constant 0
+eq
+not
+not
+if-goto L27
+call Keyboard.keyPressed 0
+pop local 0
+push pointer 0
+call SquareGame.moveSquare 1
+pop temp 0
+goto L26
+label L27
+goto L8
+label L9
+push constant 0
+return
